--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -26,6 +26,7 @@ jobs:
         run: npm config set python python2.7
       - name: Set node config to set msvs_version to 2017
         run: npm config set msvs_version 2017
+      - run: npm install
       - run: npm run build -m
       - run: npm run package-win
       - run: node create-msi.js
