--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Add WIX TOOLSET topath
-        run: echo "##[add-path]$WIX"
+        run: echo "::add-path::$WIX"
         if: matrix.os == 'windows-latest'
       - name: Check out Git repository
         uses: actions/checkout@v1
