--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm install
       - run: npm run build -m
       - run: npm run package-win
-      - run:run: |
+      - run: |
           $env:PATH += ";$env:WIX\bin"
           node create-msi.js
       - name: see directory
