--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -20,8 +20,16 @@ jobs:
       - run: npm install
       - run: npm run build -m
       - run: npm run package-win
-      - run: |
-          $env:PATH += ";$env:WIX\bin"
+      - name: Use WIX
+        if: matrix.os == 'windows-latest'
+        run: |
+          $wixToolsetBinPath = ";C:\Program Files (x86)\WiX Toolset v3.11\bin;"
+          $env:PATH = $env:PATH + $wixToolsetBinPath
+          [Environment]::SetEnvironmentVariable("Path", $env:PATH, [EnvironmentVariableTarget]::Machine)
+          if ((Get-Command "light.exe" -ErrorAction SilentlyContinue) -eq $null)
+          {
+            Write-Host "Unable to find light.exe in your PATH"
+          }
           node create-msi.js
       - name: see directory
-        run: ls
+        run: ls ./release
