--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -36,4 +36,5 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           artifacts: ".release/msi/*.msi"
+          tag: "v1.0.1"
           token: ${{ secrets.GITHUB_TOKEN }} 
