--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -30,7 +30,11 @@ jobs:
           node-version: 13
       - name: Install Dependencies
         run: npm install
-
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
       - name: Build
         run: npm run build -m
       - name: Package
@@ -51,7 +55,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: bangbib.msi
-          path:"./release/msi/bangbib.msi"
+          path: "./release/msi/bangbib.msi"
       - uses: ncipollo/release-action@v1
         with:
           artifact:"./release/msi/bangbib.msi"
