--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -49,5 +49,5 @@ jobs:
         with:
           artifact: "./release/msi/bangbib.msi"
           allowUpdates: true
-          tag: "v1.0.1"
+          tag: "v1.0.2"
           token: ${{ secrets.GITHUB_TOKEN }}
