--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-externals": "^2.1.3",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "svelte": "^3.18.1"
+    "rollup-plugin-svelte": "^5.1.1"
   },
   "dependencies": {
     "better-sqlite3": "^5.4.3",
     "bulma": "^0.8.0",
     "electron-store": "^5.1.0",
     "electron-util": "^0.13.1",
-    "papaparse": "^5.1.1"
+    "papaparse": "^5.1.1",
+    "svelte": "^3.18.1"
   }
 }
