--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "package-win": "electron-packager . --overwrite --name=bangbib --platform=win32  --arch=ia32 --icon=icons/icon.ico  --asar --out=release",
     "package-mac": "electron-packager . --overwrite --name=bangbib --platform=darwin --arch=x64  --icon=icons/icon.icns --asar --out=release",
     "package-linux": "electron-packager . --overwrite --name=bangbib --platform=linux  --arch=x64  --icon=icons/icon.png  --asar --out=release",
+    "dist": "electron-builder",
     "start:electron": "electron .",
     "dev:development": "rollup --config --watch",
     "dev:electron": "electron ."
   },
+  "build": {
+    "appId": "im.hmt.bangbib",
+    "directories": {
+      "output": "release"
+    }
+  },
   "devDependencies": {
     "electron": "^8.0.0",
-    "electron-packager": "^14.2.0",
+    "electron-builder": "^22.3.2",
     "electron-rebuild": "^1.10.0",
     "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
