--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bangbib",
   "author": "hmt",
+  "description": "Schulbibliothek, bang, bang, bang",
   "version": "1.0.0",
-  "main": "build/main.js",
+  "main": "build/electron.js",
   "private": true,
   "scripts": {
     "build": "rollup --config",
@@ -14,10 +15,14 @@
     "dist": "electron-builder",
     "start:electron": "electron .",
     "dev:development": "rollup --config --watch",
-    "dev:electron": "electron ."
+    "dev:electron": "electron .",
+    "postinstall": "electron-builder install-app-deps"
   },
   "build": {
     "appId": "im.hmt.bangbib",
+    "files": [
+      "./build/**/*"
+    ],
     "directories": {
       "output": "release"
     }
@@ -25,7 +30,6 @@
   "devDependencies": {
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
-    "electron-rebuild": "^1.10.0",
     "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
