--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,12 @@ jobs:
           node-version: 13
       - name: Install Dependencies
         run: npm install
-      - name: Rebuild Dependencies
-        run: npx electron-rebuild
       - name: Build
         run: npm run build -m
       - name: Package
         run: npm run dist
+      - name: show dir
+        run: ls release
       - name: Use WIX
         if: matrix.os == 'windows-latest'
         run: |
