--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Package
         run: npm run dist
       - name: show dir
-        run: ls release
+        run: ls dist
       - name: Use WIX
         if: matrix.os == 'windows-latest'
         run: |
