--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "author": "hmt",
   "description": "Schulbibliothek, bang, bang, bang",
   "version": "1.0.0",
-  "main": "./build/electron.js",
+  "main": "./build/main.js",
   "private": true,
   "scripts": {
     "build": "rollup --config",
     "start": "npm run build && run-s start:*",
     "dev": "rollup -c && run-p dev:*",
-    "package-win": "electron-packager . --overwrite --name=bangbib --platform=win32  --arch=ia32 --icon=icons/icon.ico  --asar --out=release",
-    "package-mac": "electron-packager . --overwrite --name=bangbib --platform=darwin --arch=x64  --icon=icons/icon.icns --asar --out=release",
-    "package-linux": "electron-packager . --overwrite --name=bangbib --platform=linux  --arch=x64  --icon=icons/icon.png  --asar --out=release",
     "dist": "electron-builder",
     "start:electron": "electron .",
     "dev:development": "rollup --config --watch",
@@ -19,7 +16,10 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "build": {
-    "appId": "im.hmt.bangbib"
+    "appId": "im.hmt.bangbib",
+    "files": [
+      "./build/**/*"
+    ]
   },
   "devDependencies": {
     "electron": "^8.0.0",
