--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rollup --config",
     "start": "npm run build && run-s start:*",
     "dev": "rollup -c && run-p dev:*",
-    "dist": "electron-builder",
+    "dist": "npm run build && electron-builder -l",
     "start:electron": "electron .",
     "dev:development": "rollup --config --watch",
     "dev:electron": "electron .",
@@ -19,9 +19,9 @@
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^2.6.1",
+    "rollup": "^2.7.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-externals": "^2.1.5",
@@ -35,6 +35,6 @@
     "electron-util": "^0.14.1",
     "ley": "^0.5.0",
     "papaparse": "^5.2.0",
-    "svelte": "^3.20.1"
+    "svelte": "^3.21.0"
   }
 }
