build nur auf master [ci skip]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and release bangbib
 on:
   push:
     branches:
-      - '**'
+      - 'master'
     tags-ignore:
       - '*.*.*'
 jobs:
