--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,11 @@ jobs:
           node-version: 13
       - name: Install Dependencies
         run: npm install
+      - name: set version
+        run: |
+          echo "export const VERSION = { gitHash: '${{ github.sha }}', buildVersion: '1.0.${{ github.run_number }}', production: true }" > src/version.js
+      - name: show version
+        run: cat src/version.js
       - name: Build
         env:
           THE_AUTHOR: ${{ secrets.AUTHOR }}
