--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "prettier-plugin-svelte": "^1.2.1",
     "rollup": "^2.26.9",
     "rollup-plugin-css-only": "^3.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-node-externals": "^2.2.0"
+    "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-svelte": "^7.0.0"
   },
   "dependencies": {
     "better-sqlite3": "^7.1.0",
