--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
+    "builtin-modules": "^3.2.0",
     "electron": "^12.0.0",
     "electron-builder": "^22.8.0",
     "npm-run-all": "^4.1.5",
