--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.1",
     "builtin-modules": "^3.2.0",
     "electron": "^16.0.4",
     "electron-builder": "^22.8.0",
